--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,7 @@
     -->
     <title>React App</title>
     <script src="../src/index.js" type="text/jsx"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css">
 
     <!-- <link rel="stylesheet" href="styles.css" /> -->
 
