Updated description meta

--- a/public/index.html
+++ b/public/index.html
@@ -20,9 +20,8 @@
 
     <title>My Blanket</title>
     <title>Blanket Resume</title>
-<meta name="description" content="">
+<meta name="description" content="Blanket's Single Page Applicaiton">
 
-<link href="css/addtohomescreen.min.css" rel="stylesheet">
 
 <meta name="mobile-web-app-capable" content="yes">
 <meta name="apple-mobile-web-app-capable" content="yes">
