Moved to root url

--- a/public/index.html
+++ b/public/index.html
@@ -59,7 +59,7 @@
 <link href="/meta/ios/apple-touch-startup-image-1242x2208.png"
     media="(device-width: 414px) and (-webkit-device-pixel-ratio: 3)" rel="apple-touch-startup-image" />
 
-<meta name="msapplication-starturl" content="/Blanket-React">
+<meta name="msapplication-starturl" content="/">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
 <link href="favicon.ico" rel="shortcut icon">
